# rag-forge

./: .env.example  .gitignore  README.md  pyproject.toml
data/chroma_db/: chroma.sqlite3
data/eval/: golden_qa.json
docker/: Dockerfile  docker-compose.yml
scripts/: compare_chunkers.py  compare_retrievers.py  evaluate.py  ingest.py  query.py
src/rag_forge/agent/: app.py  evaluator.py  executor.py  router.py  tools.py
src/rag_forge/api/: app.py  dependencies.py  middleware.py  schemas.py
src/rag_forge/api/routes/: health.py  ingest.py  query.py
src/rag_forge/cache/: embedding_cache.py  semantic_cache.py
src/rag_forge/config/: settings.py
src/rag_forge/core/: interfaces.py  pipeline.py
src/rag_forge/document/: chunker.py  chunker_factory.py  loader.py  models.py
src/rag_forge/embedding/: factory.py  local_embedder.py  openai_embedder.py
src/rag_forge/evaluation/: metrics.py
src/rag_forge/generation/: llm_client.py  prompts.py  response.py
src/rag_forge/guardrails/: input_guard.py  output_guard.py  relevance.py
src/rag_forge/observability/: logging.py  tracer.py
src/rag_forge/retrieval/: hybrid.py  query_transform.py  reranker.py  retriever.py
src/rag_forge/vectorstore/: chroma_store.py  factory.py  qdrant_store.py
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_cache.py  test_chunker.py  test_guardrails.py  test_pipeline.py  test_retriever.py
